<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.artelsv.petprojectsecond.ui.profile.ProfileViewModel" />

        <import type="android.view.View" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}">

            <ImageButton
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/back_button"
                android:padding="@dimen/icons_padding"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/iv_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/exit_button"
                android:padding="@dimen/icons_padding"
                android:src="@drawable/ic_logout_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mcv_image_container"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="@dimen/big_top_margin"
                app:cardBackgroundColor="@color/profile_image_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView">

                <ImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:contentDescription="@string/profile_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_no_photography_96dp" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="@dimen/big_top_margin"
                android:layout_marginEnd="@dimen/default_end_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mcv_image_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.user.username}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="@dimen/default_top_margin"
                android:layout_marginEnd="@dimen/default_end_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.user.name}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_start_margin"
                android:layout_marginTop="@dimen/big_top_margin"
                android:layout_marginEnd="@dimen/default_end_margin"
                android:text="@string/button_profile_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}" />

    </FrameLayout>
</layout>