<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.artelsv.petprojectsecond.ui.persondetail.PersonDetailViewModel" />

        <import type="android.view.View" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/cl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/small_padding"
                        android:src="@drawable/ic_baseline_arrow_back_24" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@{viewModel.cast == null ? viewModel.crew == null ? @string/person_detail_error : @string/person_detail_crew : @string/person_detail_cast}"
                        tools:text="Вернуться обратно" />

                </Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mcv_image_container"
                        android:layout_width="192dp"
                        android:layout_height="192dp"
                        android:layout_marginTop="@dimen/medium_margin"
                        app:cardBackgroundColor="@color/profile_image_background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView">

                        <ImageView
                            android:id="@+id/iv_person_image"
                            android:layout_width="192dp"
                            android:layout_height="192dp"
                            android:contentDescription="@string/profile_image"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_no_photography_96dp" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mcv_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tiny_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/tiny_margin"
                        app:cardCornerRadius="@dimen/default_radius"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mcv_image_container">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/small_padding">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tv_name"
                                style="@style/TextAppearance.AppCompat.Medium"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.cast == null ? viewModel.crew == null ? @string/person_detail_error : viewModel.crew.name : viewModel.cast.name}" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/iv_detail_expanded"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="@dimen/tiny_margin"
                                android:src="@drawable/ic_baseline_arrow_drop_down_24" />

                            <LinearLayout
                                android:id="@+id/ll_detail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            </LinearLayout>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_movies"
                        style="@style/TextAppearance.AppCompat.Title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tiny_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/tiny_margin"
                        android:text="@string/person_detail_movies"
                        android:visibility="@{viewModel.movies == null ? View.GONE : View.VISIBLE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mcv_info" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_movies"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tiny_margin"
                        android:visibility="@{viewModel.movies == null ? View.GONE : View.VISIBLE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_movies" />

                    <ProgressBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/tiny_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/tiny_margin"
                        android:visibility="@{viewModel.movies == null ? View.VISIBLE : View.GONE}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mcv_info" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:id="@+id/ll_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.error ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_error"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/person_detail_error" />

            <Button
                android:id="@+id/btn_error_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/default_top_margin"
                android:text="@string/person_detail_button_error_back" />

        </LinearLayout>

    </FrameLayout>
</layout>